# gavel

./: .gitignore  AGENTS.md  README.md  RUN.md  pyproject.toml  temp.py
.claude/: settings.json
cache/: index.json
gavel/: app.py  audit.py  data.py  distill.py  grader.py  reward.py  traces.py  train_grpo.py  verify.py
gavel/caching/: __init__.py  cache.py
gavel/grpo/: data.py  grader.py  launch.sh  traces.jsonl  train.sh
gavel/sft/: data.py  train.py  train.sh
gavel/static/: index.html
gavel/trl_grpo/: __init__.py  rollout.py  train.py  trainer.py
runs/grader-sft/: audit.json
runs/trl-grpo/: traces.jsonl
scripts/: audit.sh  run_trl_grpo.sh  serve_app.sh  serve_grader.sh  serve_judge.sh  smoketest.sh  train_sft.sh
