[project]
name = "gavel"
version = "0.1.0"
description = "gavel"
authors = [{name="giyushino", email="allanzhang440@gmail.com" }]

requires-python = "==3.14.*"
keywords = ["pytorch", "training"]

# i want minimal deps, but this will likely
# grow considerably in the future
dependencies = [
    "trl",
    "tokenizers",
    "datasets",
    "vllm"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["torchure*"]

